# playwright-playground

./: .cursorrules  .gitignore  PROMPTS.md  README.md  TASKS.md  pyproject.toml
.cursor/rules/: task-list.mdc
tests/: test_book_a_demo.py  test_homepage.py  test_navbar.py  utils.py
