[project]
name = "playwright-playground"
version = "0.1.0"
description = "Playwright UI testing project for joinhorizons.com"
authors = ["Ben Yue <yuesong@gmail.com>"]
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.43.0",
    "pytest>=7.0.0",
    "pytest-playwright>=0.4.4",
    "ruff>=0.4.0",
    "typing-extensions>=4.0.0"
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D"]
ignore = [] 